infrastructure-live-v1/staging/vpc/igw.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "staging-main"
  }
}
